first draft templatematch successfully

--- a/templates/knowit.html
+++ b/templates/knowit.html
@@ -76,6 +76,8 @@
             <h2>Result:</h2>
             <textarea id="decoderesult" name="bodyout" wrap="logical", readonly="readonly">
 {{.Result}}
+{{.FeaRaw}}
+{{.FeaPur}}
             </textarea>
         </div>
 
