--- a/templates/knowit.html
+++ b/templates/knowit.html
@@ -81,13 +81,9 @@
             <h2>Result:</h2>
             <textarea id="decoderesult" name="bodyout" wrap="logical", readonly="readonly">
 {{.Result}}
-+++++++++++++FeaRaw++++++++++++++++
-{{ range $fr := .FeaRaw }}
-{{.Time}}<-->{{.Nano}}<-->{{.Value}}
-{{ end }}
 +++++++++++++FeaPur++++++++++++++++
 {{ range $fp := .FeaPur }}
-{{.Time}}<-->{{.Nano}}<-->{{.BoTime}}<-->{{.DeTime}}<-->{{.Value}}
+{{.Value}}<-->{{.Time}}<-->{{.Nano}}<-->{{.BoTime}}<-->{{.DeTime}}
 {{ end }}
             </textarea>
         </div>
