add the qos func for training

--- a/templates/knowit.html
+++ b/templates/knowit.html
@@ -70,7 +70,7 @@
                 <br>Choose Learning Model:
                 <input type="radio" name="Model" value="HoSrc" /> Handover-Src
                 <input type="radio" name="Model" value="HoTgt" /> Handover-Tgt
-                <input type="radio" name="Model" value="Non-Ho" /> Other
+                <input type="radio" name="Model" value="QosFlow" /> QosFlow
                 <br>TrainingLabel:
                 <input type="radio" name="SampleLabel" value="Positive" />+1 
                 <input type="radio" name="SampleLabel" value="Negative" />-1
